--- a/OCA-Backend/oca-api/package.json
+++ b/OCA-Backend/oca-api/package.json
@@ -14,7 +14,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "ollama": "^0.6.3",
+    "pdf-parse": "^1.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
